Closed Bug 978188 Opened 12 years ago Closed 12 years ago

dist/include/js/GCAPI.h:320:10: warning: private field 'restartVerifier' is not used [-Wunused-private-field]

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Build warning with clang 3.4: { 1:59.90 In file included from $OBJDIR/js/src/Unified_cpp_js_src6.cpp:2: 1:59.90 In file included from $SRCDIRjs/src/jit/x64/CodeGenerator-x64.cpp:7: 1:59.90 In file included from $SRCDIRjs/src/jit/x64/CodeGenerator-x64.h:10: 1:59.90 In file included from $SRCDIRjs/src/jit/shared/CodeGenerator-x86-shared.h:10: 1:59.90 In file included from $SRCDIRjs/src/jit/shared/CodeGenerator-shared.h:12: 1:59.90 In file included from $SRCDIRjs/src/jit/IonFrames.h:14: 1:59.90 In file included from $SRCDIRjs/src/jscntxt.h:15: 1:59.90 In file included from $SRCDIRjs/src/vm/Runtime.h:22: 1:59.90 In file included from $SRCDIRjs/src/jsgc.h:16: 1:59.90 In file included from $SRCDIRjs/src/jsobj.h:22: 1:59.90 Warning: -Wunused-private-field in $OBJDIR/dist/include/js/GCAPI.h: private field 'restartVerifier' is not used 1:59.90 ../../dist/include/js/GCAPI.h:320:10: warning: private field 'restartVerifier' is not used [-Wunused-private-field] 1:59.90 bool restartVerifier; 1:59.90 ^ } From skimming the code, it looks like this variable is declared and initialized iff JS_GC_ZEAL is defined: http://mxr.mozilla.org/mozilla-central/source/js/public/GCAPI.h#320 http://mxr.mozilla.org/mozilla-central/source/js/src/jsfriendapi.cpp#936 ...but it's only actually *used* if *both* JS_GC_ZEAL *and* JSGC_GENERATIONAL are defined: http://mxr.mozilla.org/mozilla-central/source/js/src/jsfriendapi.cpp#942
Attached patch fix v1Splinter Review
I verified that this fixes the build warning for me.
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #8383860 - Flags: review?(terrence)
Comment on attachment 8383860 [details] [diff] [review] fix v1 Review of attachment 8383860 [details] [diff] [review]: ----------------------------------------------------------------- Good catch! Thanks. r=me ::: js/src/jsfriendapi.cpp @@ +936,3 @@ > , restartVerifier(rt->gcVerifyPostData) > #endif > + Remove the extra newline.
Attachment #8383860 - Flags: review?(terrence) → review+
Flags: in-testsuite-
Summary: /dist/include/js/GCAPI.h:320:10: warning: private field 'restartVerifier' is not used [-Wunused-private-field] → dist/include/js/GCAPI.h:320:10: warning: private field 'restartVerifier' is not used [-Wunused-private-field]
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: