Bug 978188: Guard 'restartVerifier' member-var decl with the same #ifdef as its usage, to fix clang 'unused-private-field' warning. r=terrence